1999-06-18  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (devcom3-9a): Be less specific about the expected
	error message (BSD/OS 4.0 has a bug that can cause exec* to fail
	with EACCES instead of ENOENT).

1999-06-08  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (diff-4, dirs2-10, tagf-13, importc-7, conflicts2-142b8):
	Use ${PROG} instead of "cvs".

1999-06-05  Jim Kingdon  <http://www.cyclic.com>

	* recurse.c (do_recursion, do_dir_proc): Make the SERVER_ACTIVE
	#ifdef be only around the check for server_active.  Modulo a few
	cosmetic tweaks, same as a patch submitted by Johannes Stezenbach
	of propack-data.de.

1999-06-01  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh: Add comment about rcs2-7 failures on certain days.

	Make "cvs status -v" on a removed file work:
	* status.c (cvsstatus): Reindent the client code.
	(status_fileproc): Don't need a CVS/Entries listing to show the
	tags.
	* sanity.sh (rmadd2): New test rmadd2-16 tests the existing
	behavior with "cvs log"; new test rmadd2-17 tests the new behavior
	with "cvs status".

	* sanity.sh (basicc): To match no output in dotest, put the empty
	regexp first.  Remove tests which check that first-dir exists,
	since that isn't true in the case where the OS let us delete it.
	(dotest_internal): Fix so that things work with two regexps, with
	an empty one first.

1999-05-28  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (server-4): Replace bogus directory with real one since
	the server now checks it.

1999-05-27  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (spacefiles): Clean up -c, top, and -b at end.
	(spacefiles, files): Fix bad references to CVSROOT_DIRNAME.

	Fix two problems pointed out by Olaf Kirch of swb.de/caldera.de:
	* server.c (outside_root): New function, contains expanded version
	of code from serve_directory.
	(serve_directory): Call outside_root.
	(outside_dir): New function
	(serve_modified, serve_is_modified, serve_notify,